--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ Source/*~
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+.DS_Store
+*.xcodeproj/
+Packages/
+
 ## Build generated
 build/
 DerivedData/
